--- a/.github/workflows/IPQ60XX-ALL-CTD.yml
+++ b/.github/workflows/IPQ60XX-ALL-CTD.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REPO_URL: https://github.com/LiBwrt/openwrt-6.x.git
-  REPO_BRANCH: main
+  REPO_BRANCH: main-nss
   CONFIG_FILE: configs/ipq60xx.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
